@@ -8,8 +8,7 @@ Ed Sinjiashvili		edsin@swes.saren.ru
 
 tile.png		????
 eye.png			????
-tuxblackpg.png		???
-tuXperience		Fidget
+tuxblackpg.png		????
  
 do you know who made it? let me know
 
