@@ -18,4 +18,4 @@ Dan G. Lunde	- danglund@online.no
 Buddy Smith	- nullset@dookie.net
 Ed Sinjiashvili	- edsin@swes.saren.ru
 
-Feel free to send me your favourite effect!
+Feel free to send me your favourite effect || become a developer!
