@@ -2,12 +2,14 @@ Adding the following effects:
 
 tunnel,
 spectrum analyzer
-light, bummapping
-etc.
+light, 
+bummapping
+3D
+Many more...
 
-Detecting the user's fps
+Detecting the user's fps and compiling the effects with the right fps
 
-By the way, feel free to mail your request or code of your favourite effect
+By the way, feel free to mail your request || code of your favourite effect || become a developer!
 
 
 
