@@ -1,9 +1,9 @@
 0.0.7 mikmod library is now optional and can be dis/enabled with configure --enable-mikmod=yes/no, default is yes. This means that the 
 Equalizer effect won't compile if mikmod is disabled. 
 make install does nothing from now on.
-Added Water (rain) effect, added Doom Melt effect submitted by Ed Sinjiashvili
+Added Water (rain) effect, added Doom Melt effect submitted by Ed Sinjiashvili, added SPIRALTWIST effect
 libCommon is now called libTDEC
-Added more scaling functions to libTDEC and improved speed of it
+Added more scaling functions to libTDEC and improved overall speed of it
 
 0.0.6 Added 3 new effects (circlescroller, sinewave and flipimage). A bug in the image setup was fixed in the lens effect. Image 
 functions added to the util library
