@@ -1,3 +1,5 @@
+08-05-02 Added 3 new effects, fixed some bugs. Changed libcommon into libTDEC and added many new functions, improved old ones. 
+	 Libmikmod is now optional by using --enable-mikmod switch in configure script
 07-22-02 Added 3 new effects, fixed a bug in the lens effect, added image functions to the util library
 07-13-02 Added 2 new effects, done some optimizations, separated init timer from init video
 06-23-02 Added 2 new effects, created GFX directory and added utility functions to the common lib
